--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^3.0.2",
     "express": "^4.17.1",
-    "mongoose": "^5.9.7"
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.9.7",
+    "node-sass-middleware": "^0.11.0"
   }
 }
